# autoreport

./: .gitignore  pyproject.toml
relatorio/: criar.py
relatorio/templates/: cabecalho.tex
tests/: test_criar.py
