[tool.poetry]
name = "autoreport"
version = "0.1.0"
description = "Gerador de arquivos em LaTeX desenvolvido nas aulas de introdução à computação"
authors = ["pedrotokar <pedrotokar2004@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
